@@ -58,6 +58,7 @@ import java.util.List;
 import java.util.TreeMap;
 import java.util.function.BiConsumer;
 import java.util.function.DoubleSupplier;
+import java.util.stream.Collectors;
 
 @SuppressWarnings("UnusedReturnValue")
 public class GTRecipeTypeUI {
@@ -83,10 +84,6 @@ public class GTRecipeTypeUI {
     @Setter
     @Getter
     protected int maxTooltips = 3;
-
-    @Getter
-    @Setter
-    private boolean XEIVisible = true;
 
     private CompoundTag customUICache;
     private Size xeiSize;
@@ -247,18 +244,19 @@ public class GTRecipeTypeUI {
                             widget.getSize().width, widget.getSize().height, IGuiTexture.EMPTY, cd -> {
                                 if (cd.isRemote) {
                                     if (LDLib.isReiLoaded()) {
-                                        recipeType.getRecipesByCategory().keySet()
-                                                .forEach(e -> ViewSearchBuilder.builder()
-                                                        .addCategory(GTRecipeREICategory.CATEGORIES.apply(e)).open());
+                                        ViewSearchBuilder.builder().addCategories(
+                                                recipeType.getCategories().stream()
+                                                        .map(GTRecipeREICategory::machineCategory)
+                                                        .collect(Collectors.toList()))
+                                                .open();
                                     } else if (LDLib.isJeiLoaded()) {
-                                        JEIPlugin.jeiRuntime.getRecipesGui()
-                                                .showTypes(new ArrayList<>(recipeType.getRecipesByCategory().keySet()
-                                                        .stream().map(GTRecipeJEICategory.TYPES).toList()));
+                                        JEIPlugin.jeiRuntime.getRecipesGui().showTypes(
+                                                recipeType.getCategories().stream()
+                                                        .map(GTRecipeJEICategory::machineType)
+                                                        .collect(Collectors.toList()));
                                     } else if (LDLib.isEmiLoaded()) {
-                                        recipeType.getRecipesByCategory().keySet()
-                                                .forEach(e -> EmiApi
-                                                        .displayRecipeCategory(
-                                                                GTRecipeEMICategory.CATEGORIES.apply(e)));
+                                        EmiApi.displayRecipeCategory(
+                                                GTRecipeEMICategory.machineCategory(recipeType.getCategory()));
                                     }
                                 }
                             }).setHoverTooltips("gtceu.recipe_type.show_recipes"));
